# DMath

./: CMakeLists.txt  CMakeSettings.json  README.md
examples/: example1.cpp  yo.cpp
include/DMath/: Common.hpp  Enum.hpp  LinearTransform2D.hpp  LinearTransform3D.hpp  UnitQuaternion.hpp
include/DMath/Matrix/: Matrix.hpp  MatrixBase.hpp  MatrixBaseSquare.hpp
include/DMath/Vector/: Core.hpp  Vector2D.hpp  Vector3D.hpp  Vector4D.hpp  VectorND.hpp
